# db_project

./: README.md  config.manager.py  create_table.sql  db_manager.py  func.py  main.py  pyproject.toml  requirements.txt
