[tool.poetry]
name = "db-project"
version = "0.1.0"
description = ""
authors = ["y"]
readme = "README.md"
packages = [{include = "db_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
